--- a/note-app/src/features/ObjectContainer/ObjectContainer.css
+++ b/note-app/src/features/ObjectContainer/ObjectContainer.css
@@ -1,3 +1,7 @@
+small {
+  font-size: 18px;
+}
+
 .record {
   grid-row: 2 / auto;
   display: grid;
@@ -6,4 +10,6 @@
   align-items: center;
   border: 1px solid #dae7e3;
   padding: 20px;
+  border-radius: 10px;
+  margin: 6px;
 }
