--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -1,3 +1,35 @@
+h1 {
+  color: #266e58;
+}
+.list-container {
+  background-color: #f6f6f7;
+  padding: 15px;
+  margin-bottom: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px 0px #80808040;
+}
+
+.list-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.list-actions {
+  display: flex;
+  align-items: center;
+}
+
+.list-actions button {
+  margin: 5px;
+}
+
+.record-list {
+  border-radius: 10px;
+  margin: 20px;
+}
+
 .list-headings {
   grid-row: 1 / auto;
   display: grid;
