--- a/note-app/src/features/General.css
+++ b/note-app/src/features/General.css
@@ -9,6 +9,10 @@ button {
   border: none;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 .button-green {
   background-color: #266e58;
 }
@@ -21,4 +25,10 @@ button {
   width: 40px;
   height: 40px;
   background-color: #e36027;
+}
+
+.button-orange-green {
+  width: 40px;
+  height: 40px;
+  background-color: #266e58;
 }
