--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -10,6 +10,11 @@ h1 {
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px #80808040;
 }
+.no-results {
+  display: flex;
+  justify-content: center;
+  padding: 25px;
+}
 
 .list-title {
   display: flex;
