--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -42,3 +42,15 @@ h1 {
   justify-items: center;
   align-items: center;
 }
+
+.calendar-action-cont {
+  display: flex;
+  justify-content: center;
+  margin-top: 12px;
+}
+
+.calendar-action {
+  width: 65%;
+  height: 35px;
+  max-width: 500px;
+}
