--- a/note-app/src/features/Modals/Modal/ModalTemplate/Modal.css
+++ b/note-app/src/features/Modals/Modal/ModalTemplate/Modal.css
@@ -7,11 +7,11 @@
 
 .modal-cont {
   width: 450px;
-  height: 250px;
-  display: flex;
+  padding: 25px;
+  /* height: 250px; */
   position: fixed;
   left: 50%;
-  top: 50%;
+  top: 40%;
   transform: translate(-50%, -50%);
   border-radius: 10px;
   background-color: white;
@@ -19,14 +19,12 @@
   z-index: 100;
 }
 
-.modal-actions {
-  display: flex;
-  flex-direction: row-reverse;
+.exit-modal {
+  position: absolute;
+  right: 18px;
+  top: 10px;
 }
 
-.modal-footer {
-  display: flex;
-  gap: 10px;
-  padding: 10px;
-  flex-direction: row-reverse;
+.exit-modal:hover {
+  cursor: pointer;
 }
