--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -1,6 +1,14 @@
 h1 {
   color: #266e58;
 }
+
+.header {
+  text-align: center;
+}
+.header small {
+  font-size: 1.2rem;
+}
+
 .list-container {
   background-color: #f6f6f7;
   padding: 20px;
@@ -31,16 +39,11 @@ h1 {
 }
 
 .record-list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 10;
   border-radius: 10px;
   margin: 20px;
-}
-
-.list-headings {
-  grid-row: 1 / auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-  justify-items: center;
-  align-items: center;
 }
 
 .calendar-action-cont {
