--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -40,8 +40,8 @@ h1 {
 
 .record-list {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 10;
+  row-gap: 10px;
   border-radius: 10px;
   margin: 20px;
 }
