--- a/note-app/src/features/ObjectContainer/ObjectContainer.css
+++ b/note-app/src/features/ObjectContainer/ObjectContainer.css
@@ -1,6 +1,5 @@
 small,
 a {
-  /* font-size: 18px; */
   color: black;
   text-decoration: none;
 }
@@ -30,8 +29,10 @@ a {
 }
 
 .record-data {
-  text-align: center;
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
 
 .record-actions {
