--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -11,7 +11,6 @@ h1 {
 
 .list-container {
   background-color: #f6f6f7;
-  padding: 20px;
   margin-bottom: 20px;
   margin-left: 15px;
   margin-right: 15px;
@@ -27,6 +26,7 @@ h1 {
 .list-title {
   display: flex;
   justify-content: space-between;
+  padding: 10px;
 }
 
 .list-actions {
@@ -40,10 +40,10 @@ h1 {
 
 .record-list {
   display: grid;
-  grid-template-rows: 10;
   row-gap: 10px;
   border-radius: 10px;
   margin: 20px;
+  overflow: scroll;
 }
 
 .calendar-action-cont {
@@ -56,4 +56,5 @@ h1 {
   width: 65%;
   height: 35px;
   max-width: 500px;
+  margin-bottom: 10px;
 }
