--- a/note-app/src/features/General.css
+++ b/note-app/src/features/General.css
@@ -29,8 +29,14 @@ button:hover {
   background-color: #e36027;
 }
 
-.button-orange-green {
+.button-green-square {
   width: 40px;
   height: 40px;
   background-color: #266e58;
+}
+
+.record-details-actions {
+  width: 35%;
+  display: flex;
+  justify-content: space-evenly;
 }
