--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -55,3 +55,11 @@ h1 {
   max-width: 500px;
   margin-bottom: 10px;
 }
+
+[data-item-name="question"] {
+  background-color: red;
+}
+
+.question {
+  background-color: yellow;
+}
