CSS changes and bug fixes

--- a/note-app/src/features/Modals/Modal/ModalTemplate/Modal.css
+++ b/note-app/src/features/Modals/Modal/ModalTemplate/Modal.css
@@ -6,6 +6,8 @@
 }
 
 .modal-cont {
+  display: flex;
+  justify-content: center;
   width: 75vw;
   max-width: 450px;
   padding: 25px;
@@ -27,7 +29,6 @@
 }
 
 .modal-actions {
-  width: 70%;
   display: flex;
   justify-content: space-between;
 }
