--- a/note-app/src/features/NavBar/NavBar.css
+++ b/note-app/src/features/NavBar/NavBar.css
@@ -10,7 +10,8 @@ nav {
   background-color: #f6f6f7;
   padding-left: 3%;
   padding-right: 3%;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+  /* height: 2.5vw; */
 }
 .nav-actions > button {
   margin-left: 2px;
