--- a/note-app/src/features/ObjectList/ObjectList.css
+++ b/note-app/src/features/ObjectList/ObjectList.css
@@ -8,12 +8,10 @@ h1 {
 
 .list-container {
   background-color: #f6f6f7;
-  margin-bottom: 20px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px #80808040;
-  padding: 3px;
+  padding: 20px;
 }
 .no-results {
   display: flex;
@@ -23,6 +21,7 @@ h1 {
 
 .list-title {
   display: flex;
+  align-items: flex-start;
   justify-content: space-between;
   padding: 10px;
 }
@@ -56,10 +55,25 @@ h1 {
   margin-bottom: 10px;
 }
 
-[data-item-name="question"] {
-  background-color: red;
-}
+@media (min-width: 650px) {
+  .list-container {
+    display: grid;
+    margin: 10px;
+    padding: 5px;
+    height: 100%;
+  }
 
-.question {
-  background-color: yellow;
+  .list-title {
+    min-height: 50px;
+  }
+
+  .calendar-action-cont {
+    align-self: flex-end;
+  }
+  .record-list {
+    align-self: flex-start;
+    margin: 0;
+    overflow: initial;
+    row-gap: 10px;
+  }
 }
