--- a/note-app/src/features/TextEditor/TextEditor.css
+++ b/note-app/src/features/TextEditor/TextEditor.css
@@ -13,18 +13,19 @@
   background-color: #ffffff;
   overflow: scroll;
   border-radius: 10px;
-  height: 60vw;
+  height: 100%;
   box-shadow: px 1px 1px 0px #80808040;
   margin-top: 5px;
 }
 
-[data-item-name="question"] {
-  background-color: red;
+.text-block {
+  border-radius: 5px;
+  margin: 3px;
 }
 
 .question,
 [data-item-name="question"] {
-  background-color: rgba(234, 234, 56, 0.5);
+  background-color: rgba(23, 101, 170, 0.5);
 }
 
 .positive,
@@ -34,4 +35,5 @@
 .negative,
 [data-item-name="negative"] {
   background-color: rgb(186, 67, 20, 0.5);
+  /* background-color: rgba(94, 228, 230, 0.5); */
 }
