--- a/note-app/src/features/NavBar/NavBar.css
+++ b/note-app/src/features/NavBar/NavBar.css
@@ -10,12 +10,19 @@ nav {
   background-color: #f6f6f7;
   padding-left: 3%;
   padding-right: 3%;
-  margin-bottom: 30px;
-  /* height: 2.5vw; */
+}
+
+.nav-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .nav-actions > button {
   margin-left: 2px;
   margin-right: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search {
