--- a/note-app/src/features/TextEditor/TextEditor.css
+++ b/note-app/src/features/TextEditor/TextEditor.css
@@ -37,3 +37,13 @@
   background-color: rgb(186, 67, 20, 0.5);
   /* background-color: rgba(94, 228, 230, 0.5); */
 }
+
+@media (min-width: 650px) {
+  .page-content {
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 25% 25% 25% 25%;
+  }
+}
