--- a/note-app/src/features/pages/Home.css
+++ b/note-app/src/features/pages/Home.css
@@ -1,7 +1,6 @@
 @media (min-width: 650px) {
   #home-page-content {
-    min-height: 83vh;
-    width: 100vw;
+    height: 92vh;
     justify-content: end;
     display: grid;
     grid-template-columns: 30% 40% 30%;
@@ -16,6 +15,7 @@
     grid-column: 1;
     grid-row: 1;
   }
+
   #TEMPLATE {
     grid-column: 3;
     grid-row: 1;
