--- a/note-app/src/features/ObjectContainer/ObjectContainer.css
+++ b/note-app/src/features/ObjectContainer/ObjectContainer.css
@@ -1,9 +1,3 @@
-small,
-a {
-  color: black;
-  text-decoration: none;
-}
-
 .record {
   border: 3.5px solid #dae7e3;
   padding: 20px;
@@ -26,6 +20,9 @@ a {
 
 .event-action {
   background-color: #e36027;
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
 }
 
 .record-actions div {
