--- a/note-app/src/features/TextEditor/TextEditor.css
+++ b/note-app/src/features/TextEditor/TextEditor.css
@@ -6,6 +6,9 @@
   margin-right: 15px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px #80808040;
+  grid-column: 2;
+  grid-row-start: 1;
+  grid-row-end: 10;
 }
 
 .tab {
@@ -35,15 +38,11 @@
 .negative,
 [data-item-name="negative"] {
   background-color: rgb(186, 67, 20, 0.5);
-  /* background-color: rgba(94, 228, 230, 0.5); */
 }
 
 @media (min-width: 650px) {
   .page-content {
-    height: 100vh;
-    width: 100vw;
     display: grid;
     grid-template-columns: 30% 70%;
-    grid-template-rows: 25% 25% 25% 25%;
   }
 }
