--- a/note-app/src/features/pages/Login.css
+++ b/note-app/src/features/pages/Login.css
@@ -1,4 +1,5 @@
 .login-cont {
+  margin-top: 10%;
   display: flex;
   justify-content: center;
 }
@@ -7,7 +8,7 @@
   display: flex;
   flex-direction: column;
   background-color: #f6f6f7;
-  padding: 25px;
+  padding: 35px;
   width: 60%;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px #80808040;
