--- a/note-app/src/features/ObjectContainer/ObjectContainer.css
+++ b/note-app/src/features/ObjectContainer/ObjectContainer.css
@@ -62,8 +62,13 @@
   z-index: 10;
 }
 
-@media (min-width: 650px) {
+.record-actions a {
+  text-decoration: none;
+  color: #000000;
+}
+
+@media (min-width: 850px) {
   .record-actions div {
-    padding: 2px;
+    padding: 6px;
   }
 }
