--- a/note-app/src/features/SearchField/SearchField.css
+++ b/note-app/src/features/SearchField/SearchField.css
@@ -22,6 +22,11 @@
   cursor: pointer;
 }
 
+.search-clear span {
+  color: #000000;
+}
+
 .search-results-cont {
   border-radius: 10px;
+  box-shadow: 0px 4px 4px 0px #80808040;
 }
