--- a/note-app/src/features/NavBar/NavBar.css
+++ b/note-app/src/features/NavBar/NavBar.css
@@ -37,9 +37,10 @@ nav {
 
 .title {
   justify-self: flex-end;
-  font-size: 1.8rem;
+  font-size: 2.2rem;
 }
 
 .title:hover {
   cursor: pointer;
+  opacity: 0.7;
 }
