--- a/note-app/src/features/RecordDetails/RecordDetails.css
+++ b/note-app/src/features/RecordDetails/RecordDetails.css
@@ -12,6 +12,11 @@
   transform: translate(-50%, -50%);
   border-radius: 10px;
 }
+
+#detail-drop-down:hover {
+  cursor: pointer;
+}
+
 #details-title {
   max-width: 70%;
 }
@@ -28,6 +33,11 @@
 .read-only-fields {
   display: flex;
   flex-direction: column;
+  width: 75%;
+}
+
+.read-only-value {
+  color: #807a7a;
 }
 
 .record-details-actions {
@@ -38,8 +48,20 @@
   width: 100%;
 }
 
+.record-details-actions button {
+  width: 40%;
+  max-width: 180px;
+}
+
 .detail {
   display: none;
+}
+
+.detail form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 #toggle:checked ~ .detail {
@@ -48,4 +70,21 @@
 
 .visually-hidden {
   visibility: hidden;
+}
+
+@media (min-width: 900px) {
+  #detail-drop-down {
+    display: none;
+  }
+  .detail {
+    display: initial;
+  }
+  .edit-field,
+  .read-only-fields {
+    width: 80%;
+  }
+
+  .record-details-actions button {
+    width: 30%;
+  }
 }
