--- a/note-app/src/features/TextEditor/TextEditor.css
+++ b/note-app/src/features/TextEditor/TextEditor.css
@@ -1,9 +1,7 @@
 .editor-cont {
   background-color: #f6f6f7;
   padding: 20px;
-  margin-bottom: 20px;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 6px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px #80808040;
   grid-column: 2;
@@ -19,10 +17,11 @@
 .tab {
   padding: 4px;
   background-color: #ffffff;
-  overflow: scroll;
   border-radius: 10px;
   box-shadow: px 1px 1px 0px #80808040;
   margin-top: 5px;
+  height: 87%;
+  width: 100%;
 }
 
 .text-block {
@@ -42,11 +41,4 @@
 .negative,
 [data-item-name="negative"] {
   background-color: rgb(186, 67, 20, 0.5);
-}
-
-@media (min-width: 850px) {
-  .page-content {
-    display: grid;
-    grid-template-columns: 30% 70%;
-  }
 }
