--- a/note-app/src/features/pages/Login.css
+++ b/note-app/src/features/pages/Login.css
@@ -13,6 +13,7 @@
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px #80808040;
   max-width: 375px;
+  position: relative;
 }
 
 .login-input {
@@ -23,6 +24,7 @@
 
 .login-title {
   align-self: center;
+  margin: 15px;
 }
 
 .login-actions {
@@ -31,4 +33,10 @@
 }
 .login-actions button {
   margin: 3px;
+}
+
+.login-error {
+  position: absolute;
+  top: 30%;
+  font-size: 1rem;
 }
